Fix section text height that was killing combs on ios and safari

--- a/less/style.less
+++ b/less/style.less
@@ -1056,7 +1056,7 @@ nav{
   }
   .section-text {
     overflow: auto;
-    max-height: 100%;
+    // max-height: 100%;
     padding:40px 80px;
     @media( max-width: @mobile-max ){
       padding: 0px 20px 0 20px;
